--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <hr>
         <hr>
         <h1 style="color: rgb(4, 67, 240); text-align: center;">Full Stack Developer</h1>
-        <img src="https://i.ytimg.com/vi/UoCnsh6x2ls/maxresdefault.jpg" alt="file not open">
+        <img src="https://i.ytimg.com/vi/UoCnsh6x2ls/maxresdefault.jpg" alt="not open">
         <span><b>Deepak kumar.J<br>If u need a Full Stack Developer, <br> Hire me!</b></span><br /><br>
         <button><a target="_blank" href="/hireme.html">Hire Me</a></button>
         <br><br>
